<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pendulum_simulation</name>
  <version>0.0.1</version>
  <description>Implements a class to simulate an inverted pendulum on a cart</description>
  <maintainer email="carlos.svic@gmail.com">Carlos San Vicente</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>pendulum_msgs_v2</build_depend>
  <build_depend>pendulum_driver</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pendulum_msgs_v2</exec_depend>
  <exec_depend>pendulum_driver</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
